Aggiunta modifiche stile struttura

--- a/index.html
+++ b/index.html
@@ -33,14 +33,55 @@
           </div>
           <div class="notification ten_pd">
             <span class="bold">Ricevi notifiche di nuovi messaggi</span>
-            <a href="#"><p><small>Attiva notifiche desktop</small></p></a>
+            <a href="#"><p><small class="active_notification bold">Attiva notifiche desktop</small></p></a>
           </div>
         </div>
         <div class="search"></div>
-        <div class="contacts"></div>
+        <div class="contacts">
+          <div class="friends">
+            <img src="img/avatar_1.jpg" alt="Foto profilo">
+            <span class="bold">Michele</span>
+          </div>
+          <div class="friends">
+            <img src="img/avatar_2.jpg" alt="Foto profilo">
+            <span class="bold">Fabio</span>
+          </div>
+          <div class="friends">
+            <img src="img/avatar_3.jpg" alt="Foto profilo">
+            <span class="bold">Samuele</span>
+          </div>
+          <div class="friends">
+            <img src="img/avatar_4.jpg" alt="Foto profilo">
+            <span class="bold">Luisa</span>
+          </div>
+          <div class="friends">
+            <img src="img/avatar_5.jpg" alt="Foto profilo">
+            <span class="bold">Gianmichele</span>
+          </div>
+          <div class="friends">
+            <img src="img/avatar_6.jpg" alt="Foto profilo">
+            <span class="bold">Gianluisa</span>
+          </div>
+          <div class="friends">
+            <img src="img/avatar_7.jpg" alt="Foto profilo">
+            <span class="bold">Gianfabio</span>
+          </div>
+          <div class="friends">
+            <img src="img/avatar_8.jpg" alt="Foto profilo">
+            <span class="bold">Giansamuele</span>
+          </div>
+        </div>
       </div>
       <div class="right">
-        <div class="header"></div>
+        <div class="header ten_pd">
+          <div class="account_right bold">
+            <img src="img/avatar_1.jpg" alt="Foto profilo">
+            <div class="account_name_right ten_pd">
+              <span>Michele</span>
+              <p><small class="grey">Ultimo accesso oggi alle</small></p>
+            </div>
+          </div>
+        </div>
         <div class="messages"></div>
         <div class="type"></div>
       </div>
