--- a/index.html
+++ b/index.html
@@ -81,9 +81,18 @@
               <p><small class="grey">Ultimo accesso oggi alle</small></p>
             </div>
           </div>
+          <div class="icons">
+            <a href="#"><i class="fas fa-search"></i></a>
+            <a href="#"><i class="fas fa-paperclip"></i></a>
+            <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+          </div>
         </div>
         <div class="messages"></div>
-        <div class="type"></div>
+        <div class="type">
+          <a href="#"><i class="far fa-smile"></i></a>
+          <input class="input_type ten_pd" type="text" placeholder="Scrivi un messaggio">
+          <a href="#"><i class="fas fa-microphone"></i></a>
+        </div>
       </div>
     </div>
   </div>
