Prima bozza di messaggi

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
             <a href="#"><i class="fas fa-ellipsis-v"></i></a>
           </div>
         </div>
-        <div class="messages"></div>
+        <div class="messages">
+          <div class="container_messages">
+            <div class="sent"><p class="message">Hai portato a spasso il cane?</p></div>
+            <div class="received"><p class="message">Tutto fatto!</p></div>
+          </div>
+        </div>
         <div class="type">
           <a href="#"><i class="far fa-smile"></i></a>
           <input class="input_type ten_pd" type="text" placeholder="Scrivi un messaggio">
