--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <!-- Sezione messaggi -->
         <div class="messages">
           <div class="container_messages">
-            <div class="sent"><p class="message"></p></div>
-            <div class="received"><p class="message"></p></div>
+            <div class="message"><p v-for="item in contacts[contactIndex]['messages']" v-if="item.status == 'sent'" class="balloon sent">{{item.message}}</p></div>
+            <div class="message"><p v-for="item in contacts[contactIndex]['messages']" v-if="item.status == 'received'" class="balloon received">{{item.message}}</p></div>
           </div>
         </div>
         <!-- Input messaggi -->
