--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="messages">
           <div class="container_messages">
             <div class="message">
-              <p v-for="item in contacts[contactIndex]['messages']" :class="item.status == 'sent'? 'sent' : 'received'" class="balloon">{{item.message}}</p>
+              <p v-for="item in contacts[contactIndex]['messages']" :class="item.status == 'sent'? 'sent' : 'received'" class="balloon">{{item.message}} <small class="date_message">{{item.date}}</small> </p>
             </div>
           </div>
         </div>
