Aggiunta milestone 3, modifiche stile e day.js

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           </div>
         </div>
         <div class="search">
-            <label class="label_chat" for="search"><i class="fas fa-search"></i>
-              <input class="input_chat" type="text" name="search" placeholder="Cerca o inizia una nuova chat">
-            </label>
+            <div class="label_chat"><i class="fas fa-search"></i>
+            </div>
+            <input class="input_chat" type="text" name="search" placeholder="Cerca o inizia una nuova chat">
         </div>
         <!-- Sezione contatti -->
         <div class="contacts">
@@ -77,13 +77,14 @@
         <!-- Input messaggi -->
         <div class="type">
           <a href="#"><i class="far fa-smile"></i></a>
-          <input class="input_type ten_pd" type="text" placeholder="Scrivi un messaggio">
+          <input class="input_type ten_pd" type="text" placeholder="Scrivi un messaggio" v-model="answer" @keyup.13="addAnswer">
           <a href="#"><i class="fas fa-microphone"></i></a>
         </div>
       </div>
     </div>
   </div>
 
+<script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script src="js/script.js" charset="utf-8"></script>
 </body>
