Aggiunta funzione per filtrare contatti

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <div class="search">
             <div class="label_chat"><i class="fas fa-search"></i>
             </div>
-            <input class="input_chat" type="text" name="search" placeholder="Cerca o inizia una nuova chat">
+            <input class="input_chat" type="text" placeholder="Cerca o inizia una nuova chat" v-model="searchBar">
         </div>
         <!-- Sezione contatti -->
         <div class="contacts">
-          <div v-for="(contact, index) in contacts" class="friends" @click="contactIndex = index">
+          <div v-for="(contact, index) in contactFilter" class="friends" @click="contactIndex = index">
             <img :src="`img/avatar${contact.avatar}.jpg`" alt="Foto profilo">
             <span class="bold">{{contact.name}}</span>
           </div>
